Fix spacing issues

--- a/sitestyle.css
+++ b/sitestyle.css
@@ -29,15 +29,24 @@ hr:after {
   padding: 0 0.25em;
   background: rgba(0, 0, 0, 0.35);
 }
+#logo {
+  height: 100px;
+}
 .top {
   top: 0;
   display: table;
   position: absolute;
   width: 100%;
 }
-
+.topcon {
+  margin-bottom: 80px;
+}
+.top a {
+  font-size: 1.25em;
+}
 .page {
   background-image: url('images/Hero-Image.jpg');
+  background-size: cover;
   display: table;
   position: absolute;
   height: 100%;
@@ -54,7 +63,7 @@ hr:after {
 .inner {
   margin-left: auto;
   margin-right: auto;
-  width: 80vw;
+  width: 100vw;
 }
 h1 {
   color: white!important;
